2003-10-15  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	* AUTHORS:
	added German translations by Andrei Mitrofanow

	* fvwm/fvwm.1.in:
	typos

2003-10-11  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	added 2.4.17 NEWS

2003-09-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.1.in:
	* fvwm/conditional.c (CreateConditionMask):
	(MatchesConditionMask):
	(CreateConditionMask):
	* fvwm/fvwm.h (WindowConditionMask):
	!CurrentPage, !CurrentDesk, !Layer ... now work as they should

2003-09-23  olicha  <olivier.chapuis@free.fr>

	* libs/FImage.c (FShmInit):
	Removed debug code

2003-09-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (warp_to_fvwm_window):
	don't unnecessarily call MoveViewport

2003-09-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/decorations.c (__is_resize_allowed):
	fixed a condition

2003-09-06  malu  <ml@update.uu.se>

	* libs/FBidi.c (FBidiConvert):
	* libs/CombineChars.c (CombineChars):
	Fixed drawing combining characters on correct positions in
	right-to-left context

2003-09-05  malu  <ml@update.uu.se>

	* libs/Flocale.c (FlocaleDrawString):
	(FlocaleTextWidth):
	Fixed drawing of combining characters with font shadow
	(character offsets were miscalculated, since FlocaleTextWidth
	adds shadow width)

2003-09-05  malu  <ml@update.uu.se>

	* libs/Flocale.c (FlocaleDrawUnderline):
	Fixed bug with text width when a string contains only
	"orphaned" combining characters (compensation for font shadowd
	was counted twice)

2003-09-04  olicha  <olivier.chapuis@free.fr>

	* todo-2.6:
	Added E.18, added comments on C.9 and C.15

2003-09-03  olicha  <olivier.chapuis@free.fr>

	* libs/Flocale.c (FlocaleTextWidth):
	Fixed a comb_char core dump

	* libs/Makefile.am:
	Fixed compilation if either iconv, libpng or Xrender headers are
	not at a standard place

2003-09-03  Mikhael Goikhman  <migo@homemail.com>

	* acinclude.m4:
	fixed error message for incorrect --with-SOMETHING-library argument
