@@ -1,3 +1,9 @@
+2003-10-23  Mikhael Goikhman  <migo@homemail.com>
+
+	* configure.in:
+	improved Perl detection messages,
+	restored FvwmGtkDebug independence from gtk libs
+
 2003-10-15  Mikhael Goikhman  <migo@homemail.com>
 
 	* configure.in:
